--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div class="hero">
-        <audio id="background-audio" src="/animation/animation/public/А –  Гон конг.mp3" autoplay controls></audio>
+        <audio id="background-audio" src="./А –  Гон конг.mp3" autoplay controls></audio>
         <div class="highway"></div>
         <div class="city"></div>
         <div class="car">
             <img src="/animation/animation/public/avto.png" alt="">
             <div class="wheel">
-                <img src="/animation/animation/public/shina.png" class="back-wheel">
-                <img src="/animation/animation/public/shina.png" class="front-wheel">
+                <img src="./shina.png" class="back-wheel">
+                <img src="./shina.png" class="front-wheel">
             </div>
         </div>
     </div>
