--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="highway"></div>
         <div class="city"></div>
         <div class="car">
-            <img src="/animation/animation/public/avto.png" alt="">
+            <img src="./avto.png" alt="car">
             <div class="wheel">
                 <img src="./shina.png" class="back-wheel">
                 <img src="./shina.png" class="front-wheel">
